<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.ruffian.library.widget.RLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:corner_radius="12dp"
            app:background_normal="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/message_love_wall_tips_title"
                android:textColor="@color/color_313133"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/message_love_wall_tips_newest"
                android:textColor="@color/color_636366"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_richest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/message_love_wall_tips_richest"
                android:textColor="@color/color_636366"
                android:textSize="15sp" />

            <com.ruffian.library.widget.RTextView
                android:id="@+id/tv_close"
                android:layout_width="156dp"
                android:layout_height="41dp"
                app:corner_radius="21dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center"
                app:background_normal="@array/button_color_bg"
                app:gradient_orientation="LEFT_RIGHT"
                app:gradient_type="linear"
                android:text="我知道了"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

        </com.ruffian.library.widget.RLinearLayout>
    </FrameLayout>
</layout>